--- a/only-buns/package.json
+++ b/only-buns/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.11",
+    "@asymmetrik/ngx-leaflet": "^17.0.0",
     "express": "^4.18.2",
     "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
